--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 pandas = "*"
 dash = "*"
 numpy = "*"
-dash-core-components = "*"
+dash-core-components = "==0.19.0"
 dash-html-components = "*"
 dash-table-experiments = "*"
 seaborn = "*"
